# SolaName

./: .env_sample  .gitignore  Anchor.toml  README.md  package-lock.json
accounts/: decoder.py  main-keypair.json
client/: Cargo.toml  main.rs
gui/: Cargo.toml  main.rs
programs/solaname/: Cargo.toml
programs/solaname/src/: lib.rs
tests/: solaname.ts
