[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.27.0"
solana-client = "1.16.4"
solana-sdk = "1.16.4"
anchor-lang = "0.27.0"  # Adjust version as needed
borsh = "0.10.3"  # Use the latest version available
bincode = "1.3" # for deserialization

[[bin]]
name = "client"
path = "main.rs"
