[package]
name = "solaname"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solaname"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-client = "1.9.0"
solana-sdk = "1.9.0"
solana-program = "1.9.0"
borsh = "0.9"
